Add copilot review comment changes